ST BlueMS v 3.7 source code - added support to AWS IoT Cloud connectivity - added support to IBM Watson Speech-to-Text - added SD Card Log configuration page
fix crash with the Aws configuration fragment
remove developemnt voice for languages

--- a/BlueMS/src/main/res/layout-large/fragment_sd_log.xml
+++ b/BlueMS/src/main/res/layout-large/fragment_sd_log.xml
@@ -51,49 +51,48 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/sdLog_loggingIntervalLabel"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintBottom_toTopOf="@+id/sdLog_hoursValues"
+            app:layout_constraintHorizontal_bias="0.524"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/sdLog_hoursLabel"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:labelFor="@id/sdLog_hoursValues"
             android:text="@string/sdLog_hoursLabel"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintBaseline_toBaselineOf="@+id/sdLog_hoursValues"
-            app:layout_constraintEnd_toStartOf="@+id/sdLog_hoursValues"
-            app:layout_constraintStart_toStartOf="@+id/sdLog_intervalLabel" />
+            app:layout_constraintStart_toStartOf="@+id/sdLog_intervalLabel"
+            app:layout_constraintTop_toBottomOf="@+id/sdLog_intervalLabel" />
 
         <EditText
             android:id="@+id/sdLog_hoursValues"
             android:layout_width="@dimen/sdLog_textFieldWidth"
-            android:layout_height="41dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:ems="10"
             android:inputType="number"
             android:maxLines="1"
             android:text="@string/sdLog_defaultHoursValues"
             android:textAlignment="textEnd"
-            app:layout_constraintBottom_toTopOf="@+id/sdLog_secondsValue"
-            app:layout_constraintStart_toStartOf="@+id/sdLog_secondsValue"
-            app:layout_constraintTop_toBottomOf="@+id/sdLog_intervalLabel" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/sdLog_hoursLabel"
+            app:layout_constraintStart_toEndOf="@+id/sdLog_hoursLabel" />
 
         <TextView
             android:id="@+id/sdLog_minuteLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:labelFor="@id/sdLog_minutesValues"
             android:text="@string/sdLog_minutesLabel"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
@@ -115,58 +114,52 @@
 
         <TextView
             android:id="@+id/sdLog_secondsLabel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:labelFor="@id/sdLog_secondsValue"
             android:text="@string/sdLog_secondsLabel"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintBaseline_toBaselineOf="@+id/sdLog_secondsValue"
-            app:layout_constraintStart_toStartOf="@+id/sdLog_hoursLabel" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/sdLog_minutesValues"
+            app:layout_constraintStart_toEndOf="@+id/sdLog_minutesValues" />
 
         <EditText
             android:id="@+id/sdLog_secondsValue"
             android:layout_width="@dimen/sdLog_textFieldWidth"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
             android:ems="10"
             android:inputType="number"
             android:maxLines="1"
             android:text="@string/sdLog_defaultMinutesValue"
             android:textAlignment="textEnd"
-            app:layout_constraintBottom_toTopOf="@+id/sdLog_errorLabel"
-            app:layout_constraintStart_toEndOf="@+id/sdLog_secondsLabel"
-            app:layout_constraintTop_toBottomOf="@+id/sdLog_hoursValues" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/sdLog_secondsLabel"
+            app:layout_constraintStart_toEndOf="@id/sdLog_secondsLabel" />
 
         <TextView
             android:id="@+id/sdLog_errorLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/colorAccent"
             android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/sdLog_featureListTitleLabel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sdLog_secondsValue" />
+            app:layout_constraintTop_toBottomOf="@+id/sdLog_minutesValues" />
 
         <TextView
             android:id="@+id/sdLog_featureListTitleLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:layout_marginBottom="17dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/sdLog_featureToLogLabel"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintBottom_toTopOf="@+id/sdLog_featureList"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sdLog_errorLabel" />
@@ -191,10 +184,10 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/sdLog_startButton"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:visibility="gone"
         app:srcCompat="@drawable/sd_log_start" />
 </android.support.design.widget.CoordinatorLayout>
