--- a/BlueMS/src/main/res/values/fragment_sd_log.xml
+++ b/BlueMS/src/main/res/values/fragment_sd_log.xml
@@ -44,8 +44,8 @@
     <string name="sdLog_defaultMinutesValue">0</string>
     <string name="sdLog_secondsLabel">Seconds:</string>
     <string name="sdLog_defaultSecondsValue">1</string>
-    <string name="sdLog_featureToLogLabel">Features to log</string>
-    <string name="sdLog_no_sd_error">Error:SD card not found</string>
+    <string name="sdLog_featureToLogLabel">Features to log:</string>
+    <string name="sdLog_no_sd_error">Error: SD card not found</string>
     <string name="sdLog_io_error">Error: SD card I/O error</string>
     <dimen name="sdLog_textFieldWidth">40dp</dimen>
 </resources>
