added timer and timeout

--- a/BlueMS/src/main/res/layout/fragment_h2t_feature.xml
+++ b/BlueMS/src/main/res/layout/fragment_h2t_feature.xml
@@ -79,6 +79,12 @@
         android:text="@string/accEvent_tap" />
 
     <TextView
+        android:id="@+id/counttime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <TextView
         android:id="@+id/h2tstatus"
         android:layout_width="match_parent"
         android:layout_height="140dp"
