added file processing

--- a/BlueMS/src/main/res/layout/fragment_h2t_feature.xml
+++ b/BlueMS/src/main/res/layout/fragment_h2t_feature.xml
@@ -112,6 +112,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/processfileButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="process file" />
+
 
 </LinearLayout>
 
