--- a/BlueMS/src/main/res/layout/fragment_h2t_feature.xml
+++ b/BlueMS/src/main/res/layout/fragment_h2t_feature.xml
@@ -1,40 +1,3 @@
-<!--
-  ~ Copyright (c) 2017  STMicroelectronics – All rights reserved
-  ~ The STMicroelectronics corporate logo is a trademark of STMicroelectronics
-  ~
-  ~ Redistribution and use in source and binary forms, with or without modification,
-  ~ are permitted provided that the following conditions are met:
-  ~
-  ~ - Redistributions of source code must retain the above copyright notice, this list of conditions
-  ~   and the following disclaimer.
-  ~
-  ~ - Redistributions in binary form must reproduce the above copyright notice, this list of
-  ~   conditions and the following disclaimer in the documentation and/or other materials provided
-  ~   with the distribution.
-  ~
-  ~ - Neither the name nor trademarks of STMicroelectronics International N.V. nor any other
-  ~   STMicroelectronics company nor the names of its contributors may be used to endorse or
-  ~   promote products derived from this software without specific prior written permission.
-  ~
-  ~ - All of the icons, pictures, logos and other images that are provided with the source code
-  ~   in a directory whose title begins with st_images may only be used for internal purposes and
-  ~   shall not be redistributed to any third party or modified in any way.
-  ~
-  ~ - Any redistributions in binary form shall not include the capability to display any of the
-  ~   icons, pictures, logos and other images that are provided with the source code in a directory
-  ~   whose title begins with st_images.
-  ~
-  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR
-  ~ IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY
-  ~ AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER
-  ~ OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-  ~ CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
-  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
-  ~ THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
-  ~ OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY
-  ~ OF SUCH DAMAGE.
-  -->
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -64,8 +27,6 @@
             android:padding="8dp"
             android:layout_centerVertical="true"
             android:layout_weight=".50"/>
-
-
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
@@ -85,27 +46,90 @@
          android:text="Capture"
          android:layout_weight=".40"/>
     </LinearLayout>
-
-
     <TextView
-        android:id="@+id/thresholdVal"
+        android:id="@+id/folderLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:text="threshold default = -109" />
+        android:text="TextView" />
+    <View style="@style/Divider"/>
 
-    <RelativeLayout
-        android:id="@+id/buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="0.6" >
+        <TextView
+            android:id="@+id/thresholdVal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:layout_weight=".30"
+            tools:text="threshold default = -109" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Freq:"
+            android:layout_weight=".10"
+            android:layout_marginBottom="5dp"/>
+        <Spinner
+            android:id="@+id/frequency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/frequency"
+            android:layout_weight=".20"
+            android:spinnerMode="dropdown" />
+    </LinearLayout>
 
     <SeekBar
         android:id="@+id/thresholdBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="150" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="0.9" >
+
+        <!-- Text Label -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="X:"
+            android:layout_weight=".10"
+            android:layout_marginBottom="5dp"/>
+        <Spinner
+            android:id="@+id/spinnerX"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/XYZ"
+            android:layout_weight=".10"
+            android:spinnerMode="dropdown" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Y:"
+            android:layout_weight=".10"
+            android:layout_marginBottom="5dp"/>
+        <Spinner
+            android:id="@+id/spinnerY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/XYZ"
+            android:layout_weight=".10"
+            android:spinnerMode="dropdown" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Z:"
+            android:layout_weight=".10"
+            android:layout_marginBottom="5dp"/>
+        <Spinner
+            android:id="@+id/spinnerZ"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/XYZ"
+            android:layout_weight=".10"
+            android:spinnerMode="dropdown" />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -134,70 +158,19 @@
         android:id="@+id/accelData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/accEvent_freefall" />
+        android:text="live acceleration data" />
 
     <TextView
         android:id="@+id/gyroData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/accEvent_tap" />
+        android:text="live Gyroscope data" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="100"
-        android:minHeight="30dip"
-        android:progress="5" />
 
     <TextView
         android:id="@+id/h2tstatus"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:text="@string/name" />
-
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number" />
-
+        android:layout_height="400dp"
+        android:text="results" />
 
 </LinearLayout>
-
-    <!--
-
-        move to java code to avoid to remove the dimension since the attribute is not recognized
-
-        androidPlot.graphWidget.marginTop="@dimen/plot_margin_top"
-        androidPlot.graphWidget.marginBottom="@dimen/plot_margin_bottom"
-        androidPlot.graphWidget.marginLeft="@dimen/plot_margin_left"
-
-        androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
-        androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
-        androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
-        androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
-
-        androidPlot.titleWidget.labelPaint.textSize="@dimen/plot_title_font_size"
-        androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
-        androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
-
-        androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
-        androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="@dimen/legend_icon_size"
-        androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="@dimen/legend_icon_size"
-        androidPlot.legendWidget.paddingBottom="@dimen/legend_box_padding"
-        androidPlot.legendWidget.paddingTop="@dimen/legend_box_padding"
-        androidPlot.legendWidget.paddingLeft="@dimen/legend_box_padding"
-        androidPlot.legendWidget.paddingRight="@dimen/legend_box_padding"
-
-        set the value from the class since there is a different behavior on kitkat and lollipop
-        androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
-        androidPlot.legendWidget.positionMetrics.YPositionMetric.value="@dimen/legend_box_position_offset_x"
-        androidPlot.legendWidget.positionMetrics.XPositionMetric.value="@dimen/legend_box_position_offset_y"
-        androidPlot.legendWidget.widthMetric.layoutType="absolute"
-        androidPlot.legendWidget.widthMetric.value="@dimen/legend_box_width"
-        androidPlot.legendWidget.heightMetric.layoutType="absolute"
-        androidPlot.legendWidget.heightMetric.value="@dimen/legend_box_height"
-     -->
