--- a/BlueMS/src/main/res/layout/fragment_h2tfile_feature.xml
+++ b/BlueMS/src/main/res/layout/fragment_h2tfile_feature.xml
@@ -8,27 +8,26 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:weightSum="0.9" >
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="fill_parent"
+        android:weightSum="0.8" >
+        <Spinner
+            android:id="@+id/fileformat"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Heel2toe"
-            android:layout_weight=".3"/>
+            android:entries="@array/fileformat"
+            android:layout_weight=".4"
+            android:spinnerMode="dropdown" />
         <Button
             android:id="@+id/processfileButton"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=".6"
-            android:text="Process File" />
+            android:text="Process File"
+            android:layout_weight=".4"/>
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:weightSum="0.9" >
+        android:weightSum="0.6" >
         <RadioButton
             android:id="@+id/beepGoodStep"
             android:layout_width="fill_parent"
@@ -36,12 +35,6 @@
             android:text="Beep"
             android:layout_weight=".30"/>
 
-        <RadioButton
-            android:id="@+id/captureToFile"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Capture"
-            android:layout_weight=".30"/>
         <RadioButton
             android:id="@+id/simulate"
             android:layout_width="fill_parent"
@@ -94,7 +87,7 @@
         android:id="@+id/thresholdBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="250" />
+        android:max="3000" />
     <View style="@style/Divider"/>
     <LinearLayout
         android:layout_width="fill_parent"
